# audioseal

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  dataset_eval.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/workflows/: lint_and_test.yaml
docs/: TRAINING.md
examples/: BuildingCustomRecipe_ExampleNotebook.ipynb  Getting_started.ipynb  attack_benchmarking_example.ipynb  attacks.py  audioseal_evaluation_multiple_audio_formats.ipynb  colab.ipynb  convert_checkpoints.py  notebook.py
src/audiocraft/modules/: conv.py  lstm.py  seanet.py
src/audioseal/: __init__.py  builder.py  loader.py  models.py
src/audioseal/cards/: audioseal_detector_16bits.yaml  audioseal_wm_16bits.yaml  llama4_detector_16bits.yaml
src/audioseal/libs/audiocraft/modules/: __init__.py  conv.py  seanet.py
src/cards/: audioseal_wm_16bits.yaml
src/scripts/: checkpoints.py  combine_checkpoints.py
tests/: test_combine_checkpoints.py  test_models.py
