[build-system]
requires = ["flit_core >=3.2,<4", "packaging~=23.1", "setuptools~=67.8", "wheel~=0.40"]
build-backend = "flit_core.buildapi"

[project]
name = "audioseal"
readme = "README.md"
authors = [{name = "Facebook AI Research"}]
requires-python = ">=3.8"
dynamic = ["version", "description"]


# zip_safe = false
classifiers=[
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
    "Development Status :: 4 - Beta",
]

dependencies = [
  "numpy",
  "omegaconf",
  "julius",
  "torch>=1.13.0",
]

[project.urls]
  Source = "https://github.com/facebookresearch/audioseal"
  Tracker = "https://github.com/facebookresearch/audioseal/issues"

[project.optional-dependencies]
  dev = [
    "func_argparse",
    "torchaudio",
    "soundfile",
    "pytest",
    "black",
    "isort",
    "flake8",
    "pre-commit",
  ]

[tool.setuptools.package-data]
"audioseal" = ["py.typed", "cards/*.yaml"]

[tool.flake8]
extend_ignore = ["E", "Y"]  # Black
per-file-ignores = [
    "__init__.py:F401",
]

[tool.isort]
profile = "black"

[tool.mypy]
disable_error_code = "type-abstract,typeddict-unknown-key"
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_untyped_decorators = false
ignore_missing_imports = true
python_version = 3.8
show_error_codes = true
show_error_context = true
strict = false
warn_unused_configs = false
warn_unused_ignores = false
exclude = ["src/audiocraft", "examples"]

[tool.pytest.ini_options]
minversion = "7.1"
testpaths = ["tests"]
filterwarnings = [
    "ignore:Deprecated call to `pkg_resources",
    "ignore:Please use `line_search_wolfe",
    "ignore:Please use `spmatrix",
    "ignore:TypedStorage is deprecated",
    "ignore:distutils Version classes are deprecated",
    "ignore:pkg_resources is deprecated",
    "ignore:torch.nn.utils.weight_norm is deprecated in favor of",
]
norecursedirs = [
  "examples/*",
]
